@@ -52,6 +52,7 @@ AM_CFLAGS = \
   -I${top_srcdir}/src/import-export \
   -I${top_srcdir}/src/register \
   -I${top_srcdir}/src/register/register-core \
+  -I${top_srcdir}/src/register/register-gnome \
   -I${top_srcdir}/src/register/ledger-core \
   ${G_WRAP_COMPILE_ARGS} \
   ${GUILE_INCS} \
