@@ -1,3 +1,8 @@
+2002-11-17  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/hbci/gnc-hbci-utils.c: Fix caching of HBCI_API
+	when using multiple files one after another.
+
 2002-11-17  Matthew Vanecek <mevanecek@yahoo.com>
 	* src/backend/postgres/putil.c: Added needed header files to the c
 	file.
